# CapiForge

./: .gitignore  AGENTS.md  README.md  capinstall  pyproject.toml  test_all.py
.github/workflows/: deb-build.yml
assets/capiforge-icons/: capiforge-ascii-compact.txt  capiforge-ascii.txt
contracts/: mcp-surface.md
debian/: README.Debian  changelog  control  copyright  rules
docs/: architecture-v01.md  demo-v03.md  demo-v04.md  mvp-v03-baseline.md  mvp-v03.md  mvp-v04-baseline.md  mvp-v04.md  mvp.md
docs/audits/: audit-v01-agent-coordination.md  audit-v02-mvp-status.md  audit-v03-mvp-closure.md  audit-v03-scope-pivot.md  audit-v04-expanded-hub.md  audit-v04-tui-removal.md  audit-v04-web-visualization.md
docs/packaging/: ppa-staging-checklist.md
docs/rfcs/: rfc-admin-bi-v10.md  rfc-multi-user-v06.md  rfc-sync-coordinator-v05.md
openspec/: config.yaml
runtime/: bootstrap_cli.py  cli.py  paths.py  version.py
runtime/coordinator/: __init__.py
runtime/events/: __init__.py  bus.py  change_watcher.py  db_paths.py  notify.py  sources.py  types.py
runtime/hub/: actions.py  data.py  nav.py  pages.py  sync.py  task_fields.py  tasks.py
runtime/installer/: core.py  entry.py  integration_config.py  state.py  tui.py
runtime/node/: current.py  mcp_stdio.py
runtime/shared/: contracts.py  errors.py  ids.py  splash.py
runtime/tui/: actions.py  app.py  commands.py  data.py  nav.py  shell.py  splash.py  task_fields.py  theme.py  view.py  widgets.py
runtime/web/: __init__.py  adopt_folder.py  app.py  brand.py  cli.py  context.py  deps.py  detail_sections.py  docs_detail.py  folder_picker.py  helpers.py  home_dashboard.py  i18n.py  local_docs.py  markdown.py  project_registry.py  sync_status.py  task_detail.py  task_fields.py  tasks_view.py  theme.py
scripts/: build-deb.sh  capiforge_cli.py  capiforge_mcp_server.py  close_audit_v02_tasks.py  close_audit_v03_release_tasks.py  close_audit_v03_tasks.py  close_audit_v04_release_tasks.py  close_audit_v04_tasks.py  demo_v1_runtime.py  index_local_docs.py  install.sh  installer_core.py  integration_config.py  mcp_config.py  release_smoke.sh  seed_audit_v01_tasks.py  seed_audit_v02_tasks.py  seed_audit_v03_closure_tasks.py  seed_audit_v03_tasks.py  seed_audit_v04_tasks.py  seed_audit_v04_web_tasks.py  seed_project_pages.py  seed_web_demo_tasks.py  supersede_audit_future_tasks.py
skills/capiforge-close-task/: SKILL.md
skills/capiforge-data-layer/: SKILL.md
skills/capiforge-pickup-task/: SKILL.md
skills/capiforge-publish-milestone/: SKILL.md
skills/capiforge-record-completed-work/: SKILL.md
skills/capiforge-start-task/: SKILL.md
storage/: coordinator-schema.sql  node-schema.sql
tests/: paths_test.py
tests/cli/: test_cli.py
tests/contracts/: authority_test.py
tests/coordinator/: coordinator_runtime_test.py
tests/e2e/: multi_node_runtime_test.py
tests/events/: change_watcher_test.py
tests/install/: setup_test.py
tests/mcp_cli/: surface_test.py
tests/node/: bootstrap_cli_test.py  current_runtime_test.py  entrypoint_runtime_test.py  mcp_actor_context_test.py  mcp_stdio_server_test.py  multi_agent_claims_test.py
tests/packaging/: deb_integration_test.py
tests/runtime/: version_test.py
(+119 files in other folders)
