[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capiforge"
version = "0.1.0"
description = "CapiForge runtime bootstrap and MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
capiforge = "runtime.cli:main"

[tool.setuptools.packages.find]
include = ["runtime*"]
namespaces = true
