[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capiforge"
version = "0.3.0"
description = "CapiForge runtime bootstrap and MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=8,<9",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "markdown-it-py>=3",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.scripts]
capiforge = "runtime.cli:main"
capinstall = "runtime.installer.entry:main"

[tool.setuptools.packages.find]
include = ["runtime*"]
namespaces = true

[tool.setuptools.package-data]
runtime = ["web/templates/**/*", "web/static/*"]

[tool.setuptools.data-files]
"share/capiforge/storage" = [
    "storage/node-schema.sql",
    "storage/coordinator-schema.sql",
]
"share/capiforge/assets/capiforge-icons" = [
    "assets/capiforge-icons/capiforge-ascii.txt",
    "assets/capiforge-icons/capiforge-ascii-compact.txt",
]
"share/capiforge/skills/capiforge-close-task" = ["skills/capiforge-close-task/SKILL.md"]
"share/capiforge/skills/capiforge-data-layer" = ["skills/capiforge-data-layer/SKILL.md"]
"share/capiforge/skills/capiforge-publish-milestone" = ["skills/capiforge-publish-milestone/SKILL.md"]
"share/capiforge/skills/capiforge-pickup-task" = ["skills/capiforge-pickup-task/SKILL.md"]
"share/capiforge/skills/capiforge-start-task" = ["skills/capiforge-start-task/SKILL.md"]
"share/capiforge/skills/capiforge-record-completed-work" = ["skills/capiforge-record-completed-work/SKILL.md"]
